tests/negative/gold/type7-test.gold
tests/negative/type7-test.toit:103:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/type7-test.toit:32:7: warning: Field-storing parameters in non-constructors are deprecated
  foo .x:
      ^~
tests/negative/type7-test.toit:33:8: warning: Field-storing parameters in non-constructors are deprecated
  foo2 .x/any:
       ^~
tests/negative/type7-test.toit:34:8: warning: Field-storing parameters in non-constructors are deprecated
  foo3 .x/A:
       ^~
tests/negative/type7-test.toit:36:7: warning: Field-storing parameters in non-constructors are deprecated
  bar .y:
      ^~
tests/negative/type7-test.toit:37:8: warning: Field-storing parameters in non-constructors are deprecated
  bar2 .y/string:
       ^~
tests/negative/type7-test.toit:38:8: warning: Field-storing parameters in non-constructors are deprecated
  bar3 .y/any:
       ^~
tests/negative/type7-test.toit:40:7: warning: Field-storing parameters in non-constructors are deprecated
  gee .z:
      ^~
tests/negative/type7-test.toit:41:8: warning: Field-storing parameters in non-constructors are deprecated
  gee2 .z/string:
       ^~
tests/negative/type7-test.toit:43:20: warning: Field-storing parameters in non-constructors are deprecated
  foo --named/bool .x:
                   ^~
tests/negative/type7-test.toit:44:21: warning: Field-storing parameters in non-constructors are deprecated
  foo2 --named/bool .x/any:
                    ^~
tests/negative/type7-test.toit:45:21: warning: Field-storing parameters in non-constructors are deprecated
  foo3 --named/bool .x/A:
                    ^~
tests/negative/type7-test.toit:47:20: warning: Field-storing parameters in non-constructors are deprecated
  bar --named/bool .y:
                   ^~
tests/negative/type7-test.toit:48:21: warning: Field-storing parameters in non-constructors are deprecated
  bar2 --named/bool .y/string:
                    ^~
tests/negative/type7-test.toit:49:21: warning: Field-storing parameters in non-constructors are deprecated
  bar3 --named/bool .y/any:
                    ^~
tests/negative/type7-test.toit:51:20: warning: Field-storing parameters in non-constructors are deprecated
  gee --named/bool .z:
                   ^~
tests/negative/type7-test.toit:52:21: warning: Field-storing parameters in non-constructors are deprecated
  gee2 --named/bool .z/string:
                    ^~
tests/negative/type7-test.toit:34:8: error: Type mismatch. Expected 'string'. Got 'A'
  foo3 .x/A:
       ^~
tests/negative/type7-test.toit:45:21: error: Type mismatch. Expected 'string'. Got 'A'
  foo3 --named/bool .x/A:
                    ^~
tests/negative/type7-test.toit:63:11: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.x 499
          ^~~
tests/negative/type7-test.toit:64:12: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.y2 499
           ^~~
tests/negative/type7-test.toit:65:12: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.z2 499
           ^~~
tests/negative/type7-test.toit:75:19: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.x --named 499
                  ^~~
tests/negative/type7-test.toit:76:20: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.y2 --named 499
                   ^~~
tests/negative/type7-test.toit:77:20: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.z2 --named 499
                   ^~~
tests/negative/type7-test.toit:87:9: error: Type mismatch. Expected 'string'. Got 'int'
  a.foo 499
        ^~~
tests/negative/type7-test.toit:88:10: error: Type mismatch. Expected 'string'. Got 'int'
  a.bar2 499
         ^~~
tests/negative/type7-test.toit:89:10: error: Type mismatch. Expected 'string'. Got 'int'
  a.gee2 499
         ^~~
tests/negative/type7-test.toit:99:17: error: Type mismatch. Expected 'string'. Got 'int'
  a.foo --named 499
                ^~~
tests/negative/type7-test.toit:100:18: error: Type mismatch. Expected 'string'. Got 'int'
  a.bar2 --named 499
                 ^~~
tests/negative/type7-test.toit:101:18: error: Type mismatch. Expected 'string'. Got 'int'
  a.gee2 --named 499
                 ^~~
tests/negative/type7-test.toit:12:18: error: Type mismatch. Expected 'string'. Got 'A'
  constructor.x3 .x/A:
                 ^~
tests/negative/type7-test.toit:23:31: error: Type mismatch. Expected 'string'. Got 'A'
  constructor.x3 --named/bool .x/A:
                              ^~
Compilation failed
